--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,12 @@
+/* normalize.less */
+@import "./../../node_modules/normalize.less/normalize.less";
+
+/* Глобальные стили */
+@import "./fonts.less";
+@import "./variables.less";
+@import "./mixins.less";
+@import "./global.less";
+
+/* Блоки */
 @import "./blocks/feedback.less";
+@import "./blocks/form.less";
