feat: eslint, fonts mixin, fixes gulp and markup

--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -6,9 +6,10 @@
   padding: 40px;
 
   width: 481px;
+  position: relative;
   background-color: @gray10;
   border-radius: 12px;
-  box-shadow: 5px 5px 15px rgba(0,0,0,.25);
+  box-shadow: 5px 5px 15px @black-025;
 }
 
 .form__title {
@@ -23,7 +24,7 @@
   border: 1px solid @white;
   outline: none;
   caret-color: black;
-  box-shadow: 0px 7px 64px rgba(0, 0, 0, 0.07);
+  box-shadow: 0 7px 64px @black-007;
 
   &:hover,
   &:focus {
