--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -3,6 +3,9 @@
 @gray10: rgba(247, 245, 249, 1);
 
 @black: rgba(59, 61, 67, 1);
+@black-025: rgba(0, 0, 0, 0.25);
+@black-007: rgba(0, 0, 0, 0.07);
+
 @white: rgba(255, 255, 255, 1);
 @blue: rgba(105, 121, 248, 1);
 @purple: rgba(133, 79, 200, 1);
