--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -2,14 +2,17 @@
   display: flex;
   flex-direction: column;
 
-  margin: 0 auto;
   padding: 40px;
-
   width: 481px;
-  position: relative;
   background-color: @gray10;
   border-radius: 12px;
   box-shadow: 5px 5px 15px @black-025;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%)
 }
 
 .form__title {
