feat: set apart js into small modules and remove feedback.less

--- a/source/pug/index.pug
+++ b/source/pug/index.pug
@@ -13,4 +13,4 @@ html(lang="ru")
         input(type="tel" name="phone" class="form__input form__input--phone" placeholder="Телефон *" required)
         input(type="email" name="email" class="form__input form__input--email" placeholder="Email")
         button(type="submit" class="form__button") Отправить запрос
-    script(src="./js/main.min.js")
+    script(src="./js/main.js" type="module")
