fix: add semantic article tag instead of section

--- a/source/pug/pages/index.pug
+++ b/source/pug/pages/index.pug
@@ -1,7 +1,7 @@
 extends ../layout/main
 
 block content
-  section(class="feedback")
+  article(class="feedback")
     form(action= formURL method="POST" class="form")
       h2(class="form__title") Задать вопрос
 
